# gridiron-edge

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release-please.yml
configs/: backtest.yaml  features.yaml  globals.yaml  modeling.yaml  paths.yaml
src/gridiron/api/: backtest.py  cli.py  pipelines.py
src/gridiron/data/: schedules.py
src/gridiron/evaluation/: metrics.py  reports.py
src/gridiron/features/: baseline.py  registry.py
src/gridiron/models/: interfaces.py  moneyline_dummy.py
src/gridiron/utils/: ids.py  io.py  time.py  validation.py
tests/: test_pipeline_smoke.py  test_splits.py  test_utils_time.py
